cs3310/Assignment 2/submission/test/pass/pgm5.java
//new int [Expression] -- Expression must be integer.

class pgm4{
    public static void main(String[] a){
        System.out.println(new somename().foo(5));
    }
}

class somename {
    int[] b;
    public int foo(int size){
        b=new int[size];
        return 0;
    }
}
